added most of functionality, need to implement routes

--- a/alchemist.html
+++ b/alchemist.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are an Alchemist!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="https://s-media-cache-ak0.pinimg.com/736x/16/24/f3/1624f36e512e4129224001d889a9fb0e.jpg" style="width:850px; height:500px;">
+
+  			<p>A master of transmutation. The alchemist can alter nature at a whim using a comibination mastery of science and magic.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
