--- a/archer.html
+++ b/archer.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are an Archer!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="http://pre11.deviantart.net/3f2e/th/pre/i/2013/135/b/d/the_archer_by_sktchwlkr-d65d3ai.jpg" style="width:850px; height:500px;">
+
+  			<p>Archers use their powerful composite bows to attack both land and air targets located diagonally from them. They're eyesight and quick thinking are unparalleled.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
