--- a/darkknight.html
+++ b/darkknight.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are a Dark Knight!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="https://s-media-cache-ak0.pinimg.com/736x/96/2c/12/962c1287be342850550f77cde79f310f.jpg">
+
+  			<p>A warrior who wields the powers of darkness, sacrificing his own life force to crush his enemies. The Dark Knight excels in an offensive role and almost always is seen alone.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
