--- a/paladin.html
+++ b/paladin.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are a Paladin!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="https://aahabershaw.files.wordpress.com/2014/06/paladin-1484133.jpg" style="width: 850px; height: 500px;">
+
+  			<p>A skilled and honorable swordsman, he duels using both sword and shield to strike enemies. He would do anything do protect his morals and those he loves.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
