--- a/samurai.html
+++ b/samurai.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are a Samurai!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="http://3.bp.blogspot.com/_OM5AFsn2jFY/TAgRFigKQAI/AAAAAAAAAdY/ysZXOKV9k3g/s1600/samurai-7-mecha-big.jpg" style="width:850px; height:500px;">
+
+  			<p>A master swordsman who follows the proud and ancient way of the blade. Wielding a katana for offense, and with a broad array of armor at his disposal, the Samurai makes for a fitting vanguard in any party.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
