--- a/sorcerer.html
+++ b/sorcerer.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are a Sorcerer!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="http://vignette2.wikia.nocookie.net/ultradragonball/images/4/42/Dark-sorcerer-219922.jpg/revision/latest?cb=20130629133359" style="height:500px; width: 900px;">
+
+  			<p>A wielder of powerful magic, the sorcerer excels in dealing elemental damage and afflicting his enemies with maladies. He is seen spending majority of his time studying in order to constantly better himself and increase his knowledge of the world.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
