--- a/summoner.html
+++ b/summoner.html
@@ -11,10 +11,10 @@
 	background-color: lightblue;
 	position:relative;
 	width:70%;
-	height:500px;
+	
 	margin-top: 8%;
 	margin-left: 15.5%;
-	opacity: .7;
+	
 	}
 
 	#start {
@@ -49,22 +49,17 @@
 <body>
 	<div class="container">
     
-  		<h1>Which RPG (Role Playing Game) Character Are You?<br>
-  			Click the start button to take the survey<br> and find your result!</h1>
+  		<h1>You are a Summoner!</h1>
 
-  		<button id="start">Start!</button>
+  		
   
   		<div id="content">
-  
+  			<img src="http://pre02.deviantart.net/f684/th/pre/f/2014/284/5/b/summoner_by_liyart-d62cnei.jpg" style="width:850px; height:500px;">
+
+  			<p>These unique spellcasters call forth powerful creatures with abilities capable of affecting entire groups of enemies and allies. The might of these summons can easily overwhelm lesser forms of magic.</p>
   		</div>
 	
 	</div>
 
-  <script>
-  	$('#start').on('click', function(){
-  		//$.get('/survey');
-  		location.replace('survey.html');
-  	})
-  </script>
 </body>
 </html>
