added route functuatliy via server.js

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
   <script>
   	$('#start').on('click', function(){
+  		console.log('hello');
   		//$.get('/survey');
-  		location.replace('survey.html');
+  		location.href ='http://localhost:3000/survey';
   	})
   </script>
 </body>
