changed server routes

--- a/survey.html
+++ b/survey.html
@@ -140,39 +140,39 @@
   		if(tally == 7){
   			
   			if(score == 7){
-  				location.href ='http://localhost:3000/darkknight';
+  				location.href ='/darkknight';
   				//location.replace('results/darkknight.html');
   			}
   			if(score > 7 && score < 14){
-  				location.href ='http://localhost:3000/ranger';
+  				location.href ='/ranger';
   				//location.replace('results/ranger.html');
   			}
   			if(score == 14){
-  				location.href ='http://localhost:3000/archer';
+  				location.href ='/archer';
   				//location.replace('results/archer.html');
   			}
   			if(score > 14 && score < 21){
-  				location.href ='http://localhost:3000/samurai';
+  				location.href ='/samurai';
   				//location.replace('results/samurai.html');
   			}
   			if(score == 21){
-  				location.href ='http://localhost:3000/paladin';
+  				location.href ='/paladin';
   				//location.replace('results/paladin.html');
   			}
   			if(score > 21 && score < 28){
-  				location.href ='http://localhost:3000/summoner';
+  				location.href ='/summoner';
   				//location.replace('results/summoner.html');
   			}
   			if(score == 28){
-  				location.href ='http://localhost:3000/cleric';
+  				location.href ='/cleric';
   				//location.replace('results/cleric.html');
   			}
   			if(score > 28 && score < 35){
-  				location.href ='http://localhost:3000/alchemist';
+  				location.href ='/alchemist';
   				//location.replace('results/alchemist.html');
   			}
   			if(score == 35){
-  				location.href ='http://localhost:3000/sorcerer';
+  				location.href ='/sorcerer';
   				//location.replace('results/sorcerer.html');
   			}
   		}
