fixed multiple server issues

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
   <script>
   	$('#start').on('click', function(){
-  		location.href ='http://localhost:3000/survey';
+  		location.href ='/survey';
   	})
   </script>
 </body>
